# ComputerVision

./: README.md  cornerGPU
GridTransform/: gridtransform.cpp
Image2RealTransform/: image2real.cpp
TransformTest/: CMakeCache.txt  CMakeLists.txt  Makefile  TransformTest.cpp  cmake_install.cmake  testvideo  video
absolutecorner/: CMakeCache.txt  CMakeLists.txt  Makefile  absolutecorner.cpp  cmake_install.cmake  corner
basicVideo/: CMakeCache.txt  CMakeLists.txt  Makefile  basicVid.cpp  cmake_install.cmake
convertAVI/: convertAVI.cpp
cornerGpu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cornerGPU  cornerGPU.cpp
flowGpu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flowGPU  pyrlk_optical_flow.cpp
flowVideo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.csv  flowVideo  flowVideo.cpp  gstreamer-1.6.3.tar.xz  out.avi  pos.avi
gpu samples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gpuTest  gpuTest.cpp
grid-detection/: grid-detection.py
houghLines/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hough  houghlines.cpp
lineDetection/: #lineDetection.cpp#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Roomba.cpp  Roomba.h  cmake_install.cmake  greenRoomba.txt  lineDetection  lineDetection.cpp  lineDetection.cpp~
multi/: CMakeCache.txt  CMakeLists.txt  Makefile  Roomba.cpp  cmake_install.cmake  multiTarget  multiTracking.cpp  redRoomba.txt
testDataGenerator/: CMakeCache.txt  CMakeLists.txt  Makefile  basicVid.cpp  cmake_install.cmake  testData  (+6 more)
(+1114 files in other folders)
