cmake_minimum_required(VERSION 3.5 )
set(CMAKE_CXX_STANDARD 11) 
set( OpenCV_DIR "~/opnecv/" )
set( OpenCV_FOUND 1 )
project( corner )
find_package( OpenCV 4 REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(  corner absolutecorner.cpp )
target_link_libraries( corner ${OpenCV_LIBS})
